fix: allow importing custom properties - EXO-65669 - Meeds-io/meeds#1070